# OTUSallHWs

./: high_scores.txt
HW3GTN/: CMakeLists.txt  HW2_GTN.cpp  HW3_GTN.cpp  check_value.cpp  check_value.h  high_scores.txt  tableActions.cpp  tableActions.h  valuesManip.cpp  valuesManip.h
HW4_calc/: CMakeLists.txt
HW4_calc/include/: astnode.hpp  kindsOfAstnode.hpp  lexer.hpp  parser.hpp
HW4_calc/src/: astnode.cpp  lexer.cpp  main.cpp  parser.cpp
HW5_data_processing/: CMakeLists.txt  interfaces.hpp  main.cpp  statistics.cpp
HW5_data_processing/include/: interfaces.hpp  max.hpp  mean.hpp  min.hpp  percentile.hpp  std_deviation.hpp
HW5_data_processing/src/: main.cpp  max.cpp  mean.cpp  min.cpp  percentile.cpp  std_deviation.cpp
HW6_containers/: CMakeLists.txt  Containers.cpp  Interface.hpp  Vect.hpp  Vect.inl  bidirect_list.inl  bidirectional_list.hpp  bidirectional_list.inl  unidirectional_list.hpp  unidirectional_list.inl
HW6_containers/include/: Row.hpp  bidirectional_list.hpp  unidirectional_list.hpp
HW6_containers/src/: Row.inl  unidirectional_list.inl
HW6_containers/tests/: tests.cpp
HW7_gtests/: CMakeLists.txt
HW7_gtests/gtests/: CMakeLists.txt  Row_tests.cpp  unidirectional_list_tests.cpp
HW7_gtests/src/: CMakeLists.txt  Containers.cpp  Row.inl  bidirectional_list.inl
HW7_gtests/src/include/: Interface.hpp  Iterator.hpp  Row.hpp  bidirectional_list.hpp
HW7_gtests/tests/: CMakeLists.txt  Row_tests.cpp  tests.cpp  unidirectional_list_tests.cpp
HW8_thread/: .gitignore  CMakeLists.txt  HW8_thread.cpp  HW8_thread.sln  HW8_thread.vcxproj  HW8_thread.vcxproj.filters  text.cpp  text.txt
HW8_thread/Debug/: HW8_thread.exe.recipe  HW8_thread.ilk  HW8_thread.vcxproj.FileListAbsolute.txt  vc143.idb
HW8_thread/Debug/HW8_thread.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  HW8_thread.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
HW8_thread/x64/Debug/: HW8_thread.exe.recipe  HW8_thread.vcxproj.FileListAbsolute.txt  vc143.idb
HW8_thread/x64/Debug/HW8_thread.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  HW8_thread.lastbuildstate
